fix the scrollbar for both lane

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -90,3 +90,27 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+.left-scrollbar {
+  --sb-track-color: #f9fafb;
+  --sb-thumb-color: #e5e5e5;
+  --sb-size: 8px;
+
+  scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+}
+
+.left-scrollbar::-webkit-scrollbar {
+  width: var(--sb-size);
+}
+
+.left-scrollbar::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  margin-block: 10px;
+
+  border-radius: 8px;
+}
+
+.left-scrollbar::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 8px;
+}
